--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +128,8 @@
     "\n",
     "# Replacing dots with underscores in the 'education' column\n",
     "client['education'] = client['education'].str.replace('.', '_')\n",
-    "# Replacing 'unknown' values with NaN in the 'education' column (First we were using .loc() but that changes the client_id data_type)\n",
-    "client['education'] = client['education'].replace('unknown', np.nan)"
+    "# Replacing 'unknown' values with NaN in the 'education' column\n",
+    "client.loc[client['education'] == 'unknown', 'education'] = np.nan"
    ]
   },
   {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
